fix: overflow scroll drawer content (#3231)

--- a/packages/components/src/components/drawer/drawer.scss
+++ b/packages/components/src/components/drawer/drawer.scss
@@ -93,6 +93,8 @@ $spacings: (
 			--db-drawer-content-padding-inline,
 			#{map.get($spacing, "inline")}
 		);
+		max-block-size: fit-content;
+		overflow: auto;
 	}
 }
 
